# open-equity-research

./: .bootstrap  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  SECURITY.md  _direct_publish_marker  _direct_publish_marker_2  oer.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bootstrap.yml  ci.yml
bootstrap_parts/: part00  part01  part02  part03  part04  part05  part06  part07
docs/: README.zh-CN.md  architecture.md  methodology.md  roadmap.md
examples/: mock_agent.py  valuation_assumptions.json
prompts/: README.md  bear.md  fundamental.md  risk.md  verifier.md
src/open_equity_research/: __init__.py  analysis_engine.py  cli.py  config.py  evidence.py  exceptions.py  facts.py  filing_text.py  io_utils.py  models.py  orchestrator.py  prompt_pack.py  report.py  sec_client.py  valuation.py  verify.py
tests/: test_cli.py  test_core.py
tests/fixtures/: companyfacts.json  submissions.json  tickers.json
